# SDL_gfx_cmake

./: CMakeLists.txt
